--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section class="hero" id="hero">
     <div class="hero-badge reveal">
       <span class="badge-dot"></span>
-      v0.3.0 — Now with Member Objects &amp; Scheduled Events
+      v0.4.0 — Stop Fixing. Start Building.
     </div>
     <h1 class="hero-title reveal">
       Discord bots,<br />
