--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>silicord — Discord bots for Roblox devs</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet" />
@@ -40,7 +41,7 @@
   <section class="hero" id="hero">
     <div class="hero-badge reveal">
       <span class="badge-dot"></span>
-      v0.4.0 — Stop Fixing. Start Building.
+      v0.4.3 — Stop Fixing. Start Building.
     </div>
     <h1 class="hero-title reveal">
       Discord bots,<br />
