--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
   <section class="hero" id="hero">
     <div class="hero-badge reveal">
       <span class="badge-dot"></span>
-      v0.4.3 — Stop Fixing. Start Building.
+      v0.4.3: Stop Fixing. Start Building.
     </div>
     <h1 class="hero-title reveal">
-      Discord bots,<br />
-      <span class="gradient-text">Roblox style.</span>
+      New language?<br />
+      <span class="gradient-text">Not a problem.</span>
     </h1>
     <p class="hero-sub reveal">
       silicord is a LuaRocks framework that lets Roblox developers build
-      Discord bots using familiar syntax — <code>task.wait()</code>, Signals,
+      Discord bots using familiar syntax such as <code>task.wait()</code>, Signals,
       method chaining, and all.
     </p>
     <div class="hero-actions reveal">
@@ -111,7 +111,7 @@
           </svg>
         </div>
         <h3>Rich component system</h3>
-        <p>Buttons, select menus, action rows, and embeds — all first-class citizens. Build interactive bots with no boilerplate.</p>
+        <p>Buttons, select menus, action rows, and embeds, all first-class citizens. Build interactive bots with no boilerplate.</p>
       </div>
 
       <div class="feature-card reveal" data-delay="300">
@@ -141,7 +141,7 @@
           </svg>
         </div>
         <h3>Smart caching</h3>
-        <p>Guild and user data is cached from gateway events. <code>GetGuild()</code> hits the cache first — fast by default.</p>
+        <p>Guild and user data is cached from gateway events. <code>GetGuild()</code> hits the cache first. Fast by default.</p>
       </div>
 
     </div>
