updates to website

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       v0.4.3: Stop Fixing. Start Building.
     </div>
     <h1 class="hero-title reveal">
-      New language?<br />
-      <span class="gradient-text">Not a problem.</span>
+      Meet<br />
+      <span class="gradient-text">[silicord]</span>
     </h1>
     <p class="hero-sub reveal">
       silicord is a LuaRocks framework that lets Roblox developers build
