--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </svg>
         </div>
         <h3>Roblox-style libraries</h3>
-        <p>Guild and user data is cached from gateway events. <code>GetGuild()</code> hits the cache first. Fast by default.</p>
+        <p>v1.0.0 introduce brand new Luau-inspired libraries such as <code>DataStore</code> and <code>CollectionService</code>, allowing better bot functionality built-in.</p>
       </div>
 
     </div>
