--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       v1.0.0: Major Updates, Major Upgrades.
     </div>
     <h1 class="hero-title reveal">
-      silicord got<br />
+      <span class="logo-bracket">[</span>silicord<span class="logo-bracket">]</span> just got<br />
       <span class="gradient-text">even better.</span>
     </h1>
     <p class="hero-sub reveal">
