Planning updates for v1.2.x

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section class="hero" id="hero">
     <div class="hero-badge reveal">
       <span class="badge-dot"></span>
-      v1.0.0: Major Updates, Major Upgrades.
+      v1.1.x: Major Updates, Major Upgrades.
     </div>
     <h1 class="hero-title reveal">
       <span class="logo-bracket">[</span>silicord<span class="logo-bracket">]</span> just got<br />
