--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>silicord — Discord bots for Roblox devs</title>
-  <meta name="description" content="A brief description of what your site does.">
+  <meta name="description" content="Silicord is a LuaRocks framework that lets Roblox developers build Discord bots using familiar syntax such as task.wait(), Signals, method chaining, and all.">
 
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://silicord.github.io/">
@@ -54,11 +54,10 @@
   <section class="hero" id="hero">
     <div class="hero-badge reveal">
       <span class="badge-dot"></span>
-      v1.1.x: Major Updates, Major Upgrades.
+      v1.2.x: Now with built-in services!
     </div>
     <h1 class="hero-title reveal">
-      <span class="logo-bracket">[</span>silicord<span class="logo-bracket">]</span> just got<br />
-      <span class="gradient-text">even better.</span>
+      Build <span class="logo-bracket">better</span>.
     </h1>
     <p class="hero-sub reveal">
       silicord is a LuaRocks framework that lets Roblox developers build
